--- a/.gitignore
+++ b/.gitignore
@@ -58,7 +58,7 @@ cover/
 # Django stuff:
 *.log
 local_settings.py
-db.sqlite3
+# db.sqlite3
 db.sqlite3-journal
 
 # Flask stuff:
@@ -146,3 +146,4 @@ cython_debug/
 
 # My ignores
 media/
+violetportfolio/
